Adding url for loading orgs by slug
